javascript part star button user choise

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Game</title>
-  <link rel="stylesheet" href="">
+
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <script type='text/javascript' src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script type="text/javascript" src= 'starter.js'></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<button id="start">START GAME</button>
+<button id="restart">PLAY AGAIN</button>
+
  <div id ="HipItself">
-   <div id="animal1"  ><<img src="koza.jpeg" alt=""></div>
-   <div id="animal1"></div>
+ <p>Please Pick animal, and than press start Button</p>
+ <p id="userPick"></p>
+   <div id="animal1"><img src="koza.jpeg"><button class="first">Goat 1 </button></div>
+   <div id="animal2"><img src="koza.jpeg"><button class="second">Goat 2 </button></div>
+</div>
 
 
 
-
-
- </div>
 </body>
 </html>
