--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
  <div id ="HipItself">
  <p>Please Pick animal, and than press start Button</p>
  <p id="userPick"></p>
-   <div id="animal1"><img src="koza.jpeg"><button class="first">Goat 1 </button></div>
-   <div id="animal2"><img src="koza.jpeg"><button class="second">Goat 2 </button></div>
+   <div id="animal1"><img src="koza.jpeg"><button class="first" data-clicked="no">Animal 1 </button></div>
+   <div id="animal2"><img src="koza.jpeg"><button class="second" data-clicked="no">Animal 2 </button></div>
 </div>
 
 
