resolved issue with buttons

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button id="start">START GAME</button>
+<button id="start" class="disabled">START GAME</button>
 <button id="restart">PLAY AGAIN</button>
 
  <div id ="HipItself">
  <p>Please Pick animal, and than press start Button</p>
- <p id="userPick"></p>
-   <div id="animal1"><img src="koza.jpeg"><button class="first" data-clicked="no">Animal 1 </button></div>
-   <div id="animal2"><img src="koza.jpeg"><button class="second" data-clicked="no">Animal 2 </button></div>
+<h5> You've picked: </h5>
+ <p id="userPick"> </p>
+   <div id="animal1"><img src="animal.jpeg"><button class="first"  >Animal 1 </button></div>
+   <div id="animal2"><img src="animal.jpeg"><button class="second" >Animal 2 </button></div>
 </div>
 
 
