--- a/index.html
+++ b/index.html
@@ -5,22 +5,41 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Game</title>
 
+    <link rel="stylesheet" href="style.css">
  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
   <script type='text/javascript' src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
   <script type="text/javascript" src= 'starter.js'></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div id="butons">
 <button id="start" class="disabled">START GAME</button>
 <button id="restart">PLAY AGAIN</button>
+Place your Bets:
+<input type="number" class="money" >
+<h1>Your Balance IS: <span class="balance"></span></h1>
+</div>
+
 
  <div id ="HipItself">
+
+
+
+
  <p>Please Pick animal, and than press start Button</p>
-<h5> You've picked: </h5>
- <p id="userPick"> </p>
-   <div id="animal1"><img src="animal.jpeg"><button class="first"  >Animal 1 </button></div>
-   <div id="animal2"><img src="animal.jpeg"><button class="second" >Animal 2 </button></div>
+<h5> You've picked: <p id="userPick"> </p></h5>
+ <button class="first"  >Animal 1 </button>
+ <button class="second" >Animal 2 </button>
+ <button class="third" >Animal 3 </button>
 </div>
+
+
+<div id ="allImg">
+    <img src="animal.jpeg" id="animal1">
+    <img src="ezhic.jpg" id="animal2">
+      <img src="ts.jpg" id="animal3">
+</div>
+
+
 
 
 
