can't fix element positions on the page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <button id="restart">PLAY AGAIN</button>
 Place your Bets:
 <input type="number" class="money" >
-<h1>Your Balance IS: <span class="balance"></span></h1>
+<h4>Your Balance IS: <span class="balance"></span></h4>
 </div>
 
 
@@ -26,7 +26,8 @@ Place your Bets:
 
 
  <p>Please Pick animal, and than press start Button</p>
-<h5> You've picked: <p id="userPick"> </p></h5>
+<h5> You've picked: </h5>
+<p id="userPick"> </p>
  <button class="first"  >Animal 1 </button>
  <button class="second" >Animal 2 </button>
  <button class="third" >Animal 3 </button>
@@ -36,7 +37,7 @@ Place your Bets:
 <div id ="allImg">
     <img src="animal.jpeg" id="animal1">
     <img src="ezhic.jpg" id="animal2">
-      <img src="ts.jpg" id="animal3">
+   <img src="ts.jpg" id="animal3">
 </div>
 
 
