resolved issue with the speed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div id="butons">
 <button id="start" class="disabled">START GAME</button>
 <button id="restart">PLAY AGAIN</button>
+</div>
 Place your Bets:
 <input type="number" class="money" >
 <h4>Your Balance IS: <span class="balance"></span></h4>
@@ -26,7 +27,6 @@ Place your Bets:
 
 
  <p>Please Pick animal, and than press start Button</p>
-<h5> You've picked: </h5>
 <p id="userPick"> </p>
  <button class="first"  >Animal 1 </button>
  <button class="second" >Animal 2 </button>
@@ -35,7 +35,7 @@ Place your Bets:
 
 
 <div id ="allImg">
-    <img src="animal.jpeg" id="animal1">
+     <img src="animal.jpeg" id="animal1">
     <img src="ezhic.jpg" id="animal2">
    <img src="ts.jpg" id="animal3">
 </div>
