issue with place bets function

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 <button id="restart">PLAY AGAIN</button>
 </div>
 Place your Bets:
-<input type="number" class="money" >
+<input type="number" class="money" ><button type="submit" class="s">press</button>
 <h4>Your Balance IS: <span class="balance"></span></h4>
 </div>
 
 
  <div id ="HipItself">
-
+ <span id ="win"></span>
 
 
 
  <p>Please Pick animal, and than press start Button</p>
 <p id="userPick"> </p>
  <button class="first"  >Animal 1 </button>
+ <span id="check"></span>
+
  <button class="second" >Animal 2 </button>
  <button class="third" >Animal 3 </button>
 </div>
