resolved issue with score

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <button id="start" class="disabled">START GAME</button>
 <button id="restart">PLAY AGAIN</button>
 </div>
-Place your Bets:
-<input type="number" class="money" ><button type="submit" class="s">press</button>
-<h4>Your Balance IS: <span class="balance"></span></h4>
+<!-- Place your Bets:
+<input type="number" class="money" ><button type="submit" class="s">press</button> -->
+<h4>Your Balance IS: <span class="balance">5</span></h4>
 </div>
 
 
