project almost done, bugs needs to be fixed

--- a/index.html
+++ b/index.html
@@ -11,28 +11,32 @@
   <script type="text/javascript" src= 'starter.js'></script>
 </head>
 <body>
+
 <div id="butons">
+
 <button id="start" class="disabled">START GAME</button>
 <button id="restart">PLAY AGAIN</button>
 </div>
-<!-- Place your Bets:
-<input type="number" class="money" ><button type="submit" class="s">press</button> -->
+
 <h4>Your Balance IS: <span class="balance">5</span></h4>
-</div>
+
 
 
  <div id ="HipItself">
  <span id ="win"></span>
-
-
-
- <p>Please Pick animal, and than press start Button</p>
-<p id="userPick"> </p>
- <button class="first"  >Animal 1 </button>
+ <span id ="win2"></span>
+  <span id ="notWin"></span>
  <span id="check"></span>
+ <p id="userPick"> </p>
+  <p>Please Pick animal, and than press start Button</p>
 
- <button class="second" >Animal 2 </button>
- <button class="third" >Animal 3 </button>
+<div id="threebtn">
+       <button class="first"  >Animal 1 </button>
+
+                <button class="second" >Animal 2 </button>
+                    <button class="third" >Animal 3 </button>
+    </div>
+
 </div>
 
 
