--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script type="text/javascript" src= 'starter.js'></script>
 </head>
 <body>
-
+<div id = "container">
 <div id="butons">
 
 <button id="start" class="disabled">START GAME</button>
@@ -39,7 +39,7 @@
 
 </div>
 
-
+</div>
 <div id ="allImg">
      <img src="animal.jpeg" id="animal1">
     <img src="ezhic.jpg" id="animal2">
